--- a/.env
+++ b/.env
@@ -7,11 +7,12 @@
 # Fill out the signup form on the frontend and submit it. If everything is set up correctly, 
 # the user's information will be validated, hashed, and stored in the database.
 
-MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/myDatabase?retryWrites=true&w=majority
-PORT=5000
+# MONGO_URI=mongodb+srv://<username>:<password>@cluster0.mongodb.net/myDatabase?retryWrites=true&w=majority
+# PORT=3001
 
 
 
 # Login information
-MONGODB_URI=your_mongodb_connection_string
+MONGODB_URI=mongodb://localhost:27017/
+
 JWT_SECRET=your_jwt_secret_key
