added auth.js files and fixed bugs so users are created & added to mongoDB Compass

--- a/.env
+++ b/.env
@@ -13,6 +13,6 @@
 
 
 # Login information
-MONGODB_URI=mongodb://localhost:27017/
+MONGODB_URI=mongodb://localhost:27017/RateThis
 
-JWT_SECRET=your_jwt_secret_key
+JWT_SECRET=tFDb3r9d>*Z$NxnPTQE7/
