--- a/package.json
+++ b/package.json
@@ -2,7 +2,8 @@
   "name": "rating-application",
   "version": "1.0.0",
   "scripts": {
-    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\""
+    "dev": "concurrently \"npm run dev --prefix client\" \"npm run dev --prefix server\"",
+      "build": "vite build"
   },
   "devDependencies": {
     "concurrently": "^7.0.0"
