--- a/server/package.json
+++ b/server/package.json
@@ -20,5 +20,9 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build"
   }
 }
