--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "nodemon": "^3.1.4",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.26.2",
     "vite": "^5.4.5"
   }
 }
