--- a/.env
+++ b/.env
@@ -17,3 +17,5 @@ MONGODB_URI=mongodb+srv://paulruszkay:Ptr199101@cluster0.122gtua.mongodb.net/Rat
 
 
 JWT_SECRET=tFDb3r9d>*Z$NxnPTQE7/
+
+VITE_API_URL=http://localhost:3001
