--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "devDependencies": {
     "@vitejs/plugin-react": "^4.3.1",
     "concurrently": "^7.0.0",
-    "sass-embedded": "^1.78.0"
+    "sass-embedded": "^1.78.0",
+    "express": "^4.17.1"
   },
   "dependencies": {
     "axios": "^1.7.7",
