--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "framer-motion": "^11.5.4",
     "graphql": "^16.9.0",
     "jsonwebtoken": "^9.0.2",
+    "jwt-decode": "^4.0.0",
     "mongodb": "^6.9.0",
     "mongoose": "^8.6.2",
     "nodemon": "^3.1.4",
